--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,10 @@
 body{
   font-family: "Manrope", sans-serif;
 }
+
+@media only screen and (max-width: 947px){
+  .container{
+    flex-direction: column;
+    gap: 10px;
+  }
+}
