--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,47 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    section{
+        @apply py-[75px]
+    }
+}
+
+@layer components{
+    .container{
+        @apply max-w-full w-[1300px] px-5 mx-auto
+    }
+
+    .btn{
+        @apply bg-blue-500 py-[15px] px-[35px] rounded text-white font-[600] mt-[35px] hover:bg-blue-600
+    }
+
+    .heading{
+        @apply text-[44px] leading-[54px] font-[700] text-headingColor
+    }
+
+    .text_para{
+        @apply text-[18px] mt-[18px]
+    }
+}
+
+@media only screen and (max-width : 1024px){
+    .container {
+        @apply w-full;
+    }
+
+    section{
+        @apply py-[35px];
+    }
+}
+
+@media only screen and (max-width : 768px){
+    .heading{
+        @apply text-[26px] leading-[36px];
+    }
+
+    .text_para{
+        @apply text-[16px] leading-7 mt-3;
+    }
+}
