Home section complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base{
     section{
-        @apply py-[75px]
+        @apply pt-[60px]
     }
 }
 
@@ -18,7 +18,7 @@
     }
 
     .heading{
-        @apply text-[44px] leading-[54px] font-[700] text-headingColor
+        @apply text-[40px] leading-[54px] font-[700] text-headingColor
     }
 
     .text_para{
@@ -30,16 +30,12 @@
     .container {
         @apply w-full;
     }
-
-    section{
-        @apply py-[35px];
-    }
 }
 
 @media only screen and (max-width : 768px){
-    .heading{
+    /* .heading{
         @apply text-[26px] leading-[36px];
-    }
+    } */
 
     .text_para{
         @apply text-[16px] leading-7 mt-3;
