--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto+Slab:wght@100..900&display=swap');
 
-*{
-  margin : 0;
-  padding : 0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: "Manrope", sans-serif;
 }
 
+.backgrnd {
+  background-image: url('./assets/images/bgimg.jpg'); 
+  background-attachment: fixed; 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+}
 
-@media only screen and (max-width: 947px){
-  .container{
+
+@media only screen and (max-width: 750px) {
+  .header {
     flex-direction: column;
     gap: 10px;
+    font-size: 16px;
   }
 }
