Server setup and working on register and login

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .backgrnd {
-  background-image: url('./assets/images/bgimg.jpg'); 
+  background: url('./assets/images/bgimg.jpg'); 
   background-attachment: fixed; 
   background-size: cover; 
   background-position: center; 
