Working on Doctor dashboard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@
     }
 
     .text_para{
-        @apply text-[16px] mt-[18px] text-[#303031]
+        @apply text-[16px] mt-[18px] text-[#59595b]
     }
 }
 
